navbar alignment fixed

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1128,8 +1128,6 @@ Navbar Area
 }
 
 .navbar-area.is-sticky {
-  top: 0;
-  left: 0;
   width: 100%;
   z-index: 999;
   position: fixed;
